start talking about async

--- a/docs/sdks/languages/php/oss-comparison-php.mdx
+++ b/docs/sdks/languages/php/oss-comparison-php.mdx
@@ -1,13 +1,5 @@
 {/* TODO 
-
-- does not handle any polymorphism whatsoever, no allof or anyOf 
-
-- se allows configure namespaces if you want. makes a git repo if you want. 
-- og gives you... travis ci lol
-
-- se provides asynchronous versions of each HTTP call, such as `getStation` and `getStationAsync`.
-- OpenAPI Generator provides asynchronous versions of each HTTP call, such as `AddPet` and `AddPetAsync`.
-
+- OG does not handle any polymorphism whatsoever, no allof or anyOf 
 */}
 
 import { Table } from "@/mdx/components";
@@ -28,7 +20,7 @@ Here's the high-level summary of the differences between Speakeasy and OpenAPI G
   ]}
   data={[
     { feature: "OpenAPI 3.2 support", speakeasy: "✅", openapi: "❌" },
-    { feature: "OpenAPI 3.1 support", speakeasy: "✅", openapi: "🚧" },
+    { feature: "OpenAPI 3.1 support", speakeasy: "✅", openapi: "⚠️ Beta" },
     { feature: "PHP version support", speakeasy: "PHP >=8.2", openapi: "PHP >=8.1" },
     { feature: "Laravel integration", speakeasy: "✅", openapi: "❌" },
     { feature: "Type safety", speakeasy: "✅", openapi: "❌" },
@@ -626,7 +618,7 @@ At the time of compiling this comparison, the Speakeasy SDK required at least PH
 
 Seeing as PHP 8.1 has stopped receiving security updates we recommend updating to use the latest PHP version regardless of the SDK being used, but when the SDK is being used by external customers it's important to consider the lowest PHP version supported.
 
-## Strict typing
+## Type system
 
 Both tools create DocBlocks to provide type annotations to all parameters and variables in the SDKs, which is useful for IDEs and for programmers to understand the code.
 
@@ -730,28 +722,6 @@ class BookingPayment implements ModelInterface, ArrayAccess, \JsonSerializable
 
 You can see how much more verbose and complex the OpenAPI Generator code is compared to Speakeasy's use of enums.
 
-### Content types
-
-Below are the content types in the schema for creating a booking, in JSON, XML, or as a form.
-
-```yaml
-requestBody:
-  content:
-    application/json:
-      schema:
-        $ref: "#/components/schemas/Booking"
-    application/xml:
-      schema:
-        $ref: "#/components/schemas/Booking"
-    application/x-www-form-urlencoded:
-      schema:
-        $ref: "#/components/schemas/Booking"
-```
-
-Speakeasy supports JSON and form content types, but not XML. OpenAPI Generator supports all three. 
-
-In Speakeasy, each content type for each operation will become its own file in the SDK. In OpenAPI Generator, all operations are combined into one API file.
-
 ### Unions
 
 In OpenAPI, you can use `oneOf` in a schema like this:
@@ -784,6 +754,35 @@ class User
 ```
 
 OpenAPI Generator can handle this schema, but creates a 380-line file called `UserAge.php` with custom code to implement unions.
+
+## Asynchronous calls
+
+Both Speakeasy and OpenAPI Generator support asynchronous HTTP calls, but they implement them differently.
+
+Speakeasy: `getStation` and `getStationAsync`.
+OpenAPI Generator `AddPet` and `AddPetAsync`.
+
+## Content types
+
+Below are the content types in the schema for creating a booking, in JSON, XML, or as a form.
+
+```yaml
+requestBody:
+  content:
+    application/json:
+      schema:
+        $ref: "#/components/schemas/Booking"
+    application/xml:
+      schema:
+        $ref: "#/components/schemas/Booking"
+    application/x-www-form-urlencoded:
+      schema:
+        $ref: "#/components/schemas/Booking"
+```
+
+Speakeasy supports JSON and form content types, but not XML. OpenAPI Generator supports all three. 
+
+In Speakeasy, each content type for each operation will become its own file in the SDK. In OpenAPI Generator, all operations are combined into one API file.
 
 ## Created documentation
 
